--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -25,7 +25,7 @@
                     <td><%= article.slug %></td>
                     <td><%= article.category.title %></td>
                     <td>
-                        <a class="btn btn-warning" href="/admin/articles/edit/<%= articles.id %>">Editar</a>             
+                        <a class="btn btn-warning" href="/admin/articles/edit/<%= article.id %>">Editar</a>             
                         <form action="/articles/delete" method="post" style="display:inline;" onsubmit="confirmarDelecao(event,this)">
                             <input type="hidden" name="id" value="<%= article.id %>">
                             <button class="btn btn-danger">Deletar</button>
