--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -1,5 +1,18 @@
 <%- include ('partials/header.ejs') %>
-<h1>Artigos</h1>
+<%- include ('partials/homenavbar.ejs') %>
+<div class="container">
+
+    <div class="card">
+        <div class="card-header">
+            <h2><%= article.title %></h2>
+        </div>
+        <div class="card-body">
+            <%- article.body %>
+        </div>
+    </div>
+    <br>
+
+</div>
 
 <%- include ('partials/footer.ejs') %>
     
