--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,13 @@
 <%- include ('partials/homenavbar.ejs') %>
 
 <div class="container">
-    <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Bem Vindo!!!</h1>
-          <p class="col-md-8 fs-4">Projeto Experimental de Blog pessoal feito com Node JS</p>
-          <button class="btn btn-primary btn-lg" type="button">Leia Mais</button>
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">Bem Vindo!!!</h1>
+                <p class="col-md-8 fs-4">Projeto Experimental de Blog pessoal feito com Node JS</p>
+                <button class="btn btn-primary btn-lg" type="button">Leia Mais</button>
+            </div>
         </div>
-      </div>
       <hr>
     <% articles.forEach(article=>{%>       
             <div class="card">
@@ -16,12 +16,21 @@
                     <h2><%= article.title %></h2>
                 </div>
                 <div class="card-body">
-                    <a href="#" class="btn btn-success">Ler Artigo</a>
+                    <a href="/<%= article.slug %>" class="btn btn-success">Ler Artigo</a>
                 </div>
             </div>
             <br>
 
     <%})%>
+
+            <div class="row">
+              <div class="col col-6">
+                <a style="float:right" href="/articles/page/2">Próxima Página >>></a>
+                <hr>
+                <br>
+                <br>
+              </div>
+            </div>
 
 </div>
 
