--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -3,8 +3,18 @@
         Guia do Programador
     </a>
         <ul class="navbar-nav me-auto">
+
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
+            <% categories.forEach((category)=>{ %>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/category/<%= category.slug %>"><%= category.title %></a>
+                </li>
+            
+            <%})%>
+
+            
         </ul>
 </nav>
